Closed Bug 1355743 Opened 7 years ago Closed 7 years ago

Fix empty Image case handling of ImageClientSingle::UpdateImage()

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

ImageClientSingle::UpdateImage() seems not handle correctly of empty Image case.
Assignee: nobody → sotaro.ikeda.g
Blocks: 1355702
Attachment #8857373 - Flags: review?(matt.woodrow)
Attachment #8857373 - Flags: review?(matt.woodrow) → review+
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5bdf0ce8d75d
Fix empty Image case handling of ImageClientSingle::UpdateImage() r=mattwoodrow
https://hg.mozilla.org/mozilla-central/rev/5bdf0ce8d75d
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: