Bug 1355743 - Fix empty Image case handling of ImageClientSingle::UpdateImage() r=mattwoodrow